# solve-any-data-analysis-problem

./: .gitattributes  .gitignore  LICENSE  README.md  requirements.txt
chapter-10/: Chapter 10 - Example solution.ipynb  Chapter 10 - Project 7 Example solution - Part 1 - Combine price paid data.ipynb
chapter-10/data/: wales-local-government-bodies.htm
chapter-11/data/: wales.parquet
chapter-12/: Chapter 12 - Project 8 Part 1 - Example solution.ipynb
chapter-12/data/: App_Categories.csv
chapter-13/: Chapter 13 - Project 8 Part 2 - Example solution.ipynb
chapter-13/data/: users.parquet
chapter-2/: Chapter 2 example solution.ipynb  Chapter 2 sample solution.ipynb
chapter-3/: Chapter 3 example solution.ipynb
chapter-4/: Chapter 4 example solution.ipynb
chapter-5/: Chapter 5 Part 1 - Extracting data from PDFs using pdfplumber.ipynb
chapter-6/: Chapter 6 - Example solution.ipynb  Chapter 6 - Project 5 Example solution - Part 1.ipynb
chapter-7/: Chapter 7 - Example solution - Investigating traffic data.ipynb  Chapter 7 - Project 5 - Example solution - Part 2.ipynb  Chapter 7 Part 1 - Investigating traffic data.ipynb  Chapter 7 Part 2 - Analyzing time series.ipynb
chapter-8/: Chapter 8 - Example solution - Analyzing time series.ipynb  Chapter 8 - Project 6 Part 1 - Example solution - Investigating traffic data.ipynb
chapter-9/: Chapter 9 - Part 1 - Combine price paid data.ipynb  Chapter 9 - Project 6 Part 2 - Example solution - Analyzing time series.ipynb  helpers.py  house_price_app.py
virtual-environment-files/: pyproject.toml  requirements.txt
(+23 files in other folders)
