[tool.poetry]
name = "solve-any-data-analysis-problem"
version = "0.1.0"
description = ""
authors = ["David Asboth"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "1.5.3"
jupyter = "^1.0.0"
fsspec = "^2023.4.0"
pyarrow = "^11.0.0"
ipython = "^8.12.0"
jedi = "^0.18.2"
matplotlib = "^3.7.1"
thefuzz = "^0.19.0"
levenshtein = "^0.21.0"
recordlinkage = "^0.15"
nbconvert = {extras = ["webpdf"], version = "^7.4.0"}
requests = "^2.31.0"
seaborn = "^0.12.2"
lxml = "^4.9.3"
plotly = "^5.16.1"
pdfplumber = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
